--- a/package.json
+++ b/package.json
@@ -4,15 +4,22 @@
   "main": "index.js",
   "author": "Arleislc <arleislc@gmail.com>",
   "license": "MIT",
-  "scripts": { 
-    "dev": "ts-node-dev src/server.ts"
+  "scripts": {
+    "dev": "ts-node-dev src/server.ts",
+    "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.2",
+    "typeorm": "^0.2.32",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
-    "typescript": "^4.2.4",
-    "ts-node-dev": "^1.1.6"
+    "@types/node": "^14.14.41",
+    "@types/uuid": "^8.3.0",
+    "ts-node-dev": "^1.1.6",
+    "typescript": "^4.2.4"
   }
 }
